[package]
name = "pallas-gpu"
version = "0.1.0"
edition = "2021"
authors = ["Raham"]
description = "GPU-accelerated MSM for Pallas curve (for Nova IVC)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/raham/pallas-gpu"
keywords = ["cryptography", "elliptic-curves", "gpu", "cuda", "pallas"]
categories = ["cryptography", "mathematics"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# halo2curves for Pallas/Vesta curve types (optional, for integration)
# halo2curves = { version = "0.6", optional = true }

[dev-dependencies]
rand = "0.8"
criterion = "0.5"

[build-dependencies]
cc = "1.0"

[features]
default = []
# Enable halo2curves integration for use with Nova
# halo2 = ["halo2curves"]

[[bench]]
name = "msm_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true

[profile.bench]
opt-level = 3
lto = true
